tests/errors/module_nonrec/module_nonrec.c
#error module_nonrec.module_nonrec:1:8 PARSE ERROR: module syntax error. Hint: `module rec ProjectName.ModuleName`. (rec keyword is mandatory for now.) (1:8)
